--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: all 300ms ease;
 }
 
 .header h1{
@@ -71,6 +72,7 @@ body{
 }
 
 .card:hover {
+    border-radius: 8px;
     box-shadow: 0px 2px 12px 9px rgba(0, 0, 0, 0.137);
     transition-delay: 0s !important;
 }
@@ -79,17 +81,17 @@ body{
     position:absolute;
     height: 100%;
     width: 100%;
-	transform: rotateY( 180deg ) perspective(600px);
+	transform: rotateY( 180deg );
 	backface-visibility: hidden;
     transition: all .2s linear 0s;
     border-radius: 8px;
+    background-size: 100% auto;
 }
 
 .card > .back {
     position:absolute;
     height: 100%;
     width: 100%;
-	transform: rotateY( 0 ) perspective(600px);
 	backface-visibility: hidden;
     transition: all .2s linear 0s;
     border-radius: 8px;
