--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@ body{
     padding: 15px;
     background-color: #00a288;
     border-radius: 8px;
-    box-shadow: 0px 2px 12px 9px rgba(0, 0, 0, 0.6);
+    transition: all .2s linear 0s;
+    box-shadow: 12px 12px 13px 4px rgba(0, 0, 0, 0.6);
     z-index: 9;
 }
 
@@ -73,8 +74,7 @@ body{
 
 .card:hover {
     border-radius: 8px;
-    box-shadow: 0px 2px 12px 9px rgba(0, 0, 0, 0.137);
-    transition-delay: 0s !important;
+    
 }
 
 .card > .front {
@@ -86,6 +86,13 @@ body{
     transition: all .2s linear 0s;
     border-radius: 8px;
     background-size: 100% auto;
+    box-shadow: 0;
+}
+
+.card > .back:hover {
+    box-shadow: 7px 7px 5px 2px rgba(0, 0, 0, 0.137);
+    transform: translate(-1.5px,-1.5px);
+    transition-delay: 0s !important;
 }
 
 .card > .back {
